[gd_scene load_steps=24 format=2]

[ext_resource path="res://PeaberryMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://seed_inverted.png" type="Texture" id=3]
[ext_resource path="res://left_click_to_shoot.png" type="Texture" id=4]
[ext_resource path="res://wasd_to_move.png" type="Texture" id=5]
[ext_resource path="res://seed.png" type="Texture" id=6]
[ext_resource path="res://pumpkin_soul.png" type="Texture" id=7]
[ext_resource path="res://dash_text.png" type="Texture" id=8]
[ext_resource path="res://ui_toggle_on.png" type="Texture" id=9]
[ext_resource path="res://ui_toggle_off.png" type="Texture" id=10]
[ext_resource path="res://start_button.png" type="Texture" id=11]
[ext_resource path="res://start_button_highlight.png" type="Texture" id=12]
[ext_resource path="res://circle.png" type="Texture" id=13]
[ext_resource path="res://bomb_text.png" type="Texture" id=14]
[ext_resource path="res://right_click_to_bomb.png" type="Texture" id=15]
[ext_resource path="res://spacebar_to_dash.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 77, 26 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 77, 26 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 77, 26 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 77, 26 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": false,
"name": "flash",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -173.0
margin_bottom = -157.0
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -80.0
margin_right = 1.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_fonts/font = SubResource( 3 )
text = "GAME OVER"
align = 1
valign = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -50.0
margin_right = 39.0
margin_bottom = -24.0
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 7 )
text = "start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Projectile1" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 23, 17 )
frames = SubResource( 2 )
animation = "flash"
offset = Vector2( -12, -4 )

[node name="Projectile2" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 35, 17 )
frames = SubResource( 2 )
animation = "flash"
offset = Vector2( -12, -4 )

[node name="Projectile3" type="AnimatedSprite" parent="."]
pause_mode = 2
position = Vector2( 47, 17 )
frames = SubResource( 2 )
animation = "flash"
offset = Vector2( -12, -4 )

[node name="Projectile4" type="AnimatedSprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 60, 17 )
frames = SubResource( 2 )
animation = "flash"
offset = Vector2( -12, -4 )

[node name="Projectile5" type="AnimatedSprite" parent="."]
pause_mode = 2
visible = false
position = Vector2( 73, 17 )
frames = SubResource( 2 )
animation = "flash"
offset = Vector2( -12, -4 )

[node name="BombExplainer" type="Sprite" parent="."]
visible = false
position = Vector2( 592, 325 )
texture = ExtResource( 15 )

[node name="DashExplainer" type="Sprite" parent="."]
visible = false
position = Vector2( 567, 329 )
texture = ExtResource( 16 )

[node name="Explainers" type="Node2D" parent="."]
visible = false

[node name="WASD" type="Sprite" parent="Explainers"]
position = Vector2( 585, 338 )
texture = ExtResource( 5 )

[node name="AttackExplainer" type="Sprite" parent="Explainers"]
position = Vector2( 589, 296 )
texture = ExtResource( 4 )

[node name="MusicToggle" type="CheckButton" parent="."]
margin_left = 3.0
margin_top = 328.0
margin_right = 93.0
margin_bottom = 368.0
focus_mode = 0
custom_colors/font_color_hover_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_colors/font_color_hover = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
custom_fonts/font = SubResource( 3 )
custom_icons/off = ExtResource( 10 )
custom_icons/on_disabled = ExtResource( 9 )
custom_icons/on = ExtResource( 9 )
custom_icons/off_disabled = ExtResource( 10 )
text = "music"
flat = true

[node name="PumpkinSoul1" type="AnimatedSprite" parent="."]
position = Vector2( 611, 16 )
frames = SubResource( 8 )

[node name="PumpkinSoul2" type="AnimatedSprite" parent="."]
position = Vector2( 623, 29 )
frames = SubResource( 8 )

[node name="PumpkinSoul3" type="AnimatedSprite" parent="."]
position = Vector2( 600, 29 )
frames = SubResource( 8 )

[node name="DashInfo" type="Node2D" parent="."]

[node name="DashText" type="Sprite" parent="DashInfo"]
position = Vector2( 22, 30 )
texture = ExtResource( 8 )

[node name="TextureProgress" type="TextureProgress" parent="DashInfo"]
margin_left = 38.0
margin_top = 21.0
margin_right = 78.0
margin_bottom = 61.0
max_value = 1.0
step = 0.05
value = 1.0
texture_progress = ExtResource( 13 )
fill_mode = 4

[node name="BombInfo" type="Node2D" parent="."]
position = Vector2( 0, 15 )

[node name="BombText" type="Sprite" parent="BombInfo"]
position = Vector2( 22, 30 )
texture = ExtResource( 14 )

[node name="TextureProgress" type="TextureProgress" parent="BombInfo"]
margin_left = 38.0
margin_top = 21.0
margin_right = 78.0
margin_bottom = 61.0
max_value = 1.0
step = 0.05
value = 1.0
texture_progress = ExtResource( 13 )
fill_mode = 4

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="toggled" from="MusicToggle" to="." method="_on_MusicToggle_toggled"]
